--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/book"]
 	path = themes/book
 	url = https://github.com/alex-shpak/hugo-book.git
+[submodule "themes/blowfish"]
+	path = themes/blowfish
+	url = git@github.com:nunocoracao/blowfish.git
