feat: 我也不知道添加了啥

--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -8,7 +8,7 @@ title = "FunnilyDog‘s Site"
   displayName = "简体中文"
   isoCode = "zh-CN"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "2006-01-02"
   # logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   description = "My awesome website 22222"
