--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@ colorScheme = "blowfish"
 defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
-enableSearch = true
+enableSearch = false
 enableCodeCopy = false
 
 replyByEmail = false
@@ -22,7 +22,7 @@ disableTextInHeader = false
 backgroundImageWidth = 1200
 
 defaultBackgroundImage = "imgs/web_bg.webp" # used as default for background images 
-# defaultFeaturedImage = "imgs/hello_world.png" # used as default for featured images in all articles
+defaultFeaturedImage = "imgs/hello_world.png" # used as default for featured images in all articles
 
 # highlightCurrentMenuArea = true
 # smartTOC = true
@@ -55,14 +55,14 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [article]
   showDate = true
-  showViews = false
-  showLikes = false
-  showDateOnlyInArticle = false
+  showViews = true
+  showLikes = true
+  showDateOnlyInArticle = true
   showDateUpdated = false
   showAuthor = true
   # showAuthorBottom = false
-  showHero = false
-  # heroStyle = "basic" # valid options: basic, big, background, thumbAndBackground
+  showHero = true
+  heroStyle = "big" # valid options: basic, big, background, thumbAndBackground
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = false
@@ -78,7 +78,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   showTableOfContents = false
   # showRelatedContent = false
   # relatedContentLimit = 3
-  showTaxonomies = false
+  showTaxonomies = true
   showAuthorsBadges = false
   showWordCount = true
   # sharingLinks = [ "linkedin", "twitter", "bluesky", "mastodon", "reddit", "pinterest", "facebook", "email", "whatsapp", "telegram"]
@@ -94,10 +94,10 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   showViews = false
   showLikes = false
   showTableOfContents = false
-  showCards = true
+  showCards = false
   orderByWeight = false
-  groupByYear = true
-  cardView = true
+  groupByYear = false
+  cardView = false
   cardViewScreenWidth = false
   constrainItemsWidth = false
 
