feat: 发布git page

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,7 +3,8 @@
 # https://blowfish.page/docs/getting-started/
 
 theme = "blowfish" # UNCOMMENT THIS LINE
-baseURL = "http://blog.funnilydog.top/root"
+# baseURL = "http://blog.funnilydog.top/root"
+baseURL = "https://funnilydog.github.io"
 defaultContentLanguage = "zh-CN"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
